@@ -1,3 +1,7 @@
+2006-11-20  Shawn Betts  <sabetts@vcn.bc.ca>
+
+	* core.lisp (get-x-selection): new function
+
 2006-11-19  Shawn Betts  <sabetts@vcn.bc.ca>
 
 	* primitives.lisp (*x-selection*): new global variable
